# emc_examples

./: .gitignore  README.md
feature_extraction/: CMakeLists.txt  README  ReadMe.MD
feature_extraction/src/: config.h  featureExtraction.cpp  featureExtraction.h  main.cpp
full_example/: CMakeLists.txt  README  ReadMe.MD
full_example/src/: config.h  detection.cpp  detection.h  driveControl.cpp  driveControl.h  main.cpp  worldModel.cpp  worldModel.h
io_example/: CMakeLists.txt  README
io_example/src/: bumper.cpp  odom.cpp
json_example/: CMakeLists.txt
json_example/src/: example.cpp  geometric_primitives.h  map.json  map_visualization.h
localisationExample/: CMakeLists.txt  ReadMe.MD  ReadMe.txt  params.json
localisationExample/src/: AdaptiveParticleFilter.cpp  AdaptiveParticleFilter.h  LandMark.cpp  LandMark.h  Object.cpp  Object.h  Particle.cpp  Particle.h  ParticleFilter.cpp  ParticleFilter.h  ParticleFilterBase.cpp  ParticleFilterBase.h  PltObject.cpp  PltObject.h  Resampler.cpp  Resampler.h  Robot.cpp  Robot.h  World.cpp  World.h  main.cpp
